--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: bisque;
+  background-color: #242424;
 }
 
 h1 {
