--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #646cff;
+  /* background-color: #646cff; */
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -48,7 +48,7 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #646cff;
+    background-color: transparent;
     color: white;
     text-transform: capitalize;
   }
